feat: add IrView, add CallTreeAPI Schema
